@@ -41,5 +41,18 @@ namespace OrthancPlugins
     {
       return key_;
     }
+
+    // required to use this class in std::set
+    bool operator< (const Token &right) const
+    {
+      if (type_ != right.type_)
+      {
+        return type_ < right.type_;
+      }
+      else
+      {
+        return key_ < right.key_ ;
+      }
+    }
   };
 }
